--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header>
         <nav class="nav-1">
             <ul class="ul-nav">
-                <li><a href="#">Online Admission</a></li>
+                <li><a href="#">Online Admissions</a></li>
                 <li><a href="#">Online Portal</a></li>
                 <li><a href="#">Affilated College</a></li>
                 <li><a href="#">Research Journal</a></li>
-                <li><a href="#">Almuni</a></li>
+                <li><a href="#">Almuni and more</a></li>
             </ul>
 
             <div class="nav-logo">
